--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "craco --openssl-legacy-provider start",
+    "start": "craco start",
     "build": "craco build",
     "lint": "eslint ./src",
     "test": "craco test",
