--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "todo-mvc",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "20.3.1"
+  },
   "dependencies": {
     "@craco/craco": "^6.1.1",
     "appwrite": "^10.1.0",
