--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "18.x"
-  },  
+    "node": "20.3.1"
+  },   
   "dependencies": {
     "@craco/craco": "^6.1.1",
     "appwrite": "^10.1.0",
